--- a/me.html
+++ b/me.html
@@ -29,7 +29,7 @@
      <p class="q6">지난 주말 아이돌의 팬미팅에 갔는데 그가 무대에 섰고, 내 시선이 그를 따라 움직였다. 그때 조명이 그의 몸을 비추었다. 그 순간 내가 카메라의 셔터를 누르자 모든 것이 조용해졌다. 그 빛 자체가 빛납니다. 내 눈 속의 그와 무대 위에서 반짝반짝 빛나고, 요정처럼 멀지만 눈앞에 다가왔다. 내가 내 눈 속의 그를 찍을 수 있어서 다행이고, 그 순간의 그는 우리의 다음 만남까지 내 머릿속에 각인될 것입니다.</p>
      <img src="img/6.jpg" alt="무대 위의 아이돌">
      <h2>끝나고 이제 무대도</h2>
-     <p q7>이게 모든 공연이 끝나는 그 순간인데 공연이 끝날 때까지 정말 꿈만 같았고 끝나면 여러분들이 리본을 모아서 사진을 찍는 등 마지막 장면만 찍으면 되는데 앞으로 다양한 퍼포먼스가 펼쳐질지 모르겠지만 무대를 포함한 모든 순간에는 한계가 있습니다.</p>
+     <p class="q7">이게 모든 공연이 끝나는 그 순간인데 공연이 끝날 때까지 정말 꿈만 같았고 끝나면 여러분들이 리본을 모아서 사진을 찍는 등 마지막 장면만 찍으면 되는데 앞으로 다양한 퍼포먼스가 펼쳐질지 모르겠지만 무대를 포함한 모든 순간에는 한계가 있습니다.</p>
      <img src="img/7.jpg" alt="끝나고 이제 무대도">
      <h2>잠자는 강아지</h2>
      <p class="q8">지나가면서 강아지들이 조용히 햇볕을 쬐며 잠드는 것을 보면서 관심을 끌었는데, 세월이 고즈넉한 느낌, 시간이 멈춘 듯 느리게 느껴졌고, 마음이 이렇게 평온했던 적이 없었던 편안함이 엊그제 같은데, 우리는 평생을 살아오느라 주변 사물을 등한시하며 살아온 적이 많았습니다. 적당히 쉬어가며 주위를 둘러보면 깜짝 놀랄만한 느낌이었습니다. 예를 들어 이 장면이 기록되어도 저는 오랫동안 치유되었습니다.</p>
